# PS5

./: .gitignore  Dockerfile.gpu  PHASE_B_SUMMARY.md  README.md  RUNBOOK_PS5.md  cli.py  pyproject.toml  requirements.txt  starter.py  tatus
.trash/20250912_220602/scripts/: healthcheck_simple.py  preupload_check.py
configs/: default.yaml  lock.yaml
runs/doclayout/ps5_seed2/: args.yaml
runs/doclayout/ps5_seed_retry2/: args.yaml  results.csv
scripts/: cleanup_checks.py  healthcheck.py  healthcheck_final.py  ingest_all_ps5.py  quick_benchmark.py  run_train_ps5.py  train_ps5.sh  train_ps5_easy.sh
src/docuagent/: __init__.py  cli.py  compile_json.py  config.py  describe.py  layout.py  ocr_lang.py  preprocessing.py  utils.py
src/docuagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docuagent/active/: __init__.py  autopilot.py  mine_errors.py  pseudo_labels.py  uncertainty.py
src/docuagent/data/: __init__.py  audit.py  clean.py  converters.py  ingest_custom.py  license_check.py  pii_scan.py  report.py  rtl_rot_check.py  sampler.py  splits.py
src/docuagent/eval/: __init__.py  calibrate.py  coco_eval.py  desc_eval.py  langid_eval.py  qa_descriptions.py  text_eval.py
src/docuagent/perf/: __init__.py  cache.py  parallel.py
src/docuagent/training/: __init__.py  ppdoc_train.py  yolo_train.py
src/docuagent/viz/: __init__.py  overlays.py  report.py
tests/: test_converters.py  test_ingest_custom.py  test_json_schema.py  test_sorting.py
