[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docuagent"
version = "0.1.0"
description = "Layout-aware document processing with OCR, language ID, and VLM descriptions"
authors = [
    {name = "DocuAgent Team", email = "ritankar.mondal@technod8.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch",
    "opencv-python",
    "pymupdf",
    "paddleocr",
    "sentence-transformers>=5.0.0",
    "faiss-cpu",
    "ultralytics>=8.0.0",
    "fasttext>=0.9.2",
    "PyYAML>=6.0",
    "Pillow>=9.0.0",
    "tqdm>=4.64.0",
    "transformers>=4.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
docuagent = "docuagent.cli:main"

[project.urls]
Homepage = "https://github.com/technod8rik/PS5"
Repository = "https://github.com/technod8rik/PS5"
Issues = "https://github.com/technod8rik/PS5/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
